--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html>
 <html lang="en">
   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
+    <div class="gameplay">
     <h1>Rock, Paper, Scissors</h1>
     <p>Please select rock, paper, or scissors.</p>
-    <button id="scoreboard-el" onclick="resetScore()">Reset Scoreboard</button>
+    <button type="button" class="btn btn-danger" id="scoreboard-el" onclick="resetScore()">Reset Scoreboard</button>
     <table>
         <tr>
             <td>Player Score</td>
@@ -22,10 +31,12 @@
         <p id="computer-el"></p>
         <p id="player-el"></p>
         <p id="gameplay-el"></p>
-        <button id="rock-el" onclick="playerRock()">Rock</button>
-        <button id="paper-el" onclick="playerPaper()">Paper</button>
-        <button id="scissors-el" onclick="playerScissors()">Scissors</button>
+        <button type="button" class="btn btn-primary" id="rock-el" onclick="playerRock()">Rock</button>
+        <button type="button" class="btn btn-primary" id="paper-el" onclick="playerPaper()">Paper</button>
+        <button type="button" class="btn btn-primary" id="scissors-el" onclick="playerScissors()">Scissors</button>
     </div>
+  </div>
     <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
